--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=SpringBikesShopApiREST
+
+springdoc.swagger-ui.operationsSorter=method
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.disable-swagger-default-url=true
